# pixeltest

./: .gitignore  CMakeLists.txt  README.md  build.bat  build.sh
include/: Components.hpp  Entities.hpp  RenderPass.hpp  ShaderUtils.hpp  StbImage.hpp  Systems.hpp  TextureUtils.hpp  WindowUtils.hpp  camera.hpp
shaders/: cubeFragment.glsl  cubeVertex.glsl  fragment.glsl  screenFragment.glsl  screenVertex.glsl  vertex.glsl
src/: Camera.cpp  ShaderUtils.cpp  TextureUtils.cpp  main.cpp
